# openoj-judger

./: .gitignore  Dockerfile  LICENSE  README.md  compiler.py  config.py  crunner  docker-compose.yml  fio  fio.c  judger.py  main  pyproject.toml  requirements.txt  restrict_fio.c  rio  runner.py  setup.py  setup.sh  test  test.cpp  test.py
api/: app.py  requirements.txt
celery-queue/: Dockerfile  Dockerfile.dev  requirements.txt  tasks.py
celery-queue/judger/: Makefile  compiler.py  crunner.c  runner.py  util.c  util.h  util.py
celery-queue/judger/tests/: test_e2e.py  test_spj.py
celery-queue/judger/tests/data/: ce.cpp  mle.cpp  src.cpp  src.py  src_write.py
src/: app.py  requirements.txt
src/judger/: Makefile  compiler.py  config.py  crunner  crunner.c  judger.py  runner.py  util.c  util.h
src/judger/tests/: test_e2e.py  test_e2e_docker.py  test_judger.py  test_mle.py  test_spj.py  test_write.py
src/judger/tests/data/: main  mle.cpp  spj.cpp  src_write.cpp  wa.cpp
