[project]
name = "judger"
version = "0.0.1"
authors = [
  { name="Tian Sibo", email="tsb20@mails.tsinghua.edu.cn" },
]
description = "A simple judger"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]